--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
  - "1.11.10"
 
 before_install:
+  - sudo apt-get install -y xorg-dev
   - go get github.com/faiface/mainthread
   - go get github.com/go-gl/gl/v2.1/gl
   - go get github.com/go-gl/glfw/v3.2/glfw
